shape detector module v1.0.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,13 @@
-airtest==1.0.26
-altgraph==0.16.1
-attrs==19.1.0
-awsebcli==3.15.3
-backcall==0.1.0
-bleach==3.1.0
-botocore==1.12.253
-cement==2.8.2
-certifi==2018.11.29
-cffi==1.11.5
-chardet==3.0.4
-colorama==0.3.9
-comtypes==1.1.7
-cycler==0.10.0
-Cython==0.29.3
-decorator==4.4.0
-defusedxml==0.5.0
-Django==2.2.7
-docutils==0.14
-entrypoints==0.3
-facebook-wda==0.2.2
-Faker==2.0.4
-future==0.16.0
-glfw==1.7.0
-glfw-cffi==0.2.0
-graphics.py==5.0.1.post1
-idna==2.7
-ipykernel==5.1.0
-ipython==7.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-iso8601==0.1.12
-jedi==0.13.3
-Jinja2==2.10
-jmespath==0.9.4
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-Kivy==1.10.1
-Kivy-examples==1.10.1
-Kivy-Garden==0.1.4
-kivy.deps.angle==0.1.7
-kivy.deps.glew==0.1.10
-kivy.deps.gstreamer==0.1.13
-kivy.deps.sdl2==0.1.18
-kiwisolver==1.0.1
-macholib==1.11
-MarkupSafe==1.1.1
-matplotlib==3.0.3
-mistune==0.8.4
-mysql-connector-python==8.0.17
-nbconvert==5.4.1
-nbformat==4.4.0
-notebook==5.7.6
-numpy==1.17.2
-opencv-contrib-python==3.4.2.17
-pandas==0.24.2
-pandocfilters==1.4.2
-parso==0.3.4
-pathspec==0.5.9
-pefile==2018.8.8
-pickleshare==0.7.5
-Pillow==5.4.1
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-protobuf==3.7.1
+cffi==1.13.2
+clipspy==0.3.2
+docutils==0.15.2
+imutils==0.5.3
+kivy-deps.glew==0.1.12
+kivy-deps.gstreamer==0.1.17
+kivy-deps.sdl2==0.1.22
+numpy==1.17.4
+opencv-contrib-python==4.1.1.26
 pycparser==2.19
-pygame==1.9.4
-pygame-menu==2.0.4
-Pygments==2.3.1
-PyInstaller==3.4
-PyOpenGL==3.1.0
-PyOpenGL-accelerate==3.1.2
-pyparsing==2.3.1
-pyperclip==1.7.0
+Pygments==2.4.2
 pypiwin32==223
-pyrsistent==0.14.11
-PySastrawi==1.2.0
-python-dateutil==2.8.0
-pytz==2019.1
-pywin32==224
-pywin32-ctypes==0.2.0
-pywinauto==0.6.3
-pywinpty==0.5.5
-PyYAML==3.13
-pyzmq==18.0.1
-qtconsole==4.4.3
-requests==2.20.1
-scipy==1.2.1
-semantic-version==2.5.0
-Send2Trash==1.5.0
-serial==0.0.70
-six==1.11.0
-sqlparse==0.3.0
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.4.2
-text-unidecode==1.3
-timestring==1.6.4
-tornado==6.0.2
-traitlets==4.3.2
-urllib3==1.24.1
-virtualenv==16.7.7
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.2
+pywin32==227
